--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^2.1.0",
     "axios": "^0.20.0-0",
+    "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "velocity-animate": "^1.5.2",
